--- a/GenSys/Views/DeviceMana/Index.cshtml
+++ b/GenSys/Views/DeviceMana/Index.cshtml
@@ -2,31 +2,22 @@
 
 @{
     ViewBag.Title = "设备管理";
+    var test = ViewData["device"];
 }
 <h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
+<input id="hdData" type="hidden" value="@ViewData["device"]" />
+
+
 @section Scripts {
-    @*<script src="~/Scripts/Bootstrap-Table-1.5.0/bootstrap-table.min.js"></script>
-    <script src="~/Scripts/Bootstrap-Table-1.5.0/locale/bootstrap-table-en-US.min.js"></script>*@
+    <script src="~/Scripts/Bootstrap-Table-1.5.0/bootstrap-table.min.js"></script>
+    <script src="~/Scripts/Bootstrap-Table-1.5.0/locale/bootstrap-table-en-US.min.js"></script>
 
     <script src="~/Scripts/jquery.editable-select/jquery.editable-select.min.js" type="text/javascript"></script>
     <link href="~/Scripts/jquery.editable-select/jquery.editable-select.min.css" rel="stylesheet" type="text/css" />
 
     <script>
-        $('#site').editableSelect({
-            effects: 'slide',
-            //可选参数default、fade
-            filter: false // 不过滤，否则选中后其它选项消失
-        });
-        $('#dev_type').editableSelect({
-            effects: 'slide',
-        });
-        $('#dev_model').editableSelect({
-            effects: 'slide',
-            filter: false
-        });
-
         //$.get("/DeviceMana/GetSite", function (data, status) {
         //    //console.log(status);
         //    var htm = "<option value='' selected='selected' disabled='disabled'>请选择/输入站点</option>";
@@ -41,106 +32,82 @@
         //    });
         //});
 
-        //$('#table-javascript').bootstrapTable({
-        //    method: 'get',
-        //    url: '/DeviceMana/GetData',
-        //    cache: false,
-        //    height: 400,
-        //    striped: true,
-        //    pagination: true,
-        //    pageSize: 50,
-        //    pageList: [10, 25, 50, 100, 200],
-        //    search: true,
-        //    showColumns: true,
-        //    showRefresh: true,
-        //    minimumCountColumns: 2,
-        //    clickToSelect: true,
-        //    columns: [{
-        //        field: 'Id',
-        //        title: '序号',
-        //        align: 'center',
-        //        valign: 'middle',
-        //        sortable: true
-        //    }, {
-        //        field: 'Site',
-        //        title: '站点',
-        //        align: 'center',
-        //        valign: 'middle',
-        //        sortable: true
-        //    }, {
-        //        field: 'Dev_Type',
-        //        title: '设备类型',
-        //        align: 'center',
-        //        valign: 'middle',
-        //        sortable: true
-        //    }, {
-        //        field: 'Dev_Model',
-        //        title: '设备型号',
-        //        align: 'center',
-        //        valign: 'middle',
-        //        sortable: true
-        //    }, {
-        //        field: 'Alias',
-        //        title: '别名',
-        //        align: 'center',
-        //        valign: 'middle',
-        //        sortable: true
-        //    }, {
-        //        field: 'Ip',
-        //        title: 'IP',
-        //        align: 'center',
-        //        valign: 'middle',
-        //        sortable: true
-        //        //}, {
-        //        //    field: 'Alg_Config',
-        //        //    title: '算法配置',
-        //        //    align: 'center',
-        //        //    valign: 'middle',
-        //        //    clickToSelect: false,
-        //        //    formatter: operateFormatter,
-        //        //    events: operateEvents
-        //        //}, {
-        //        //    field: 'Delete',
-        //        //    title: '删除',
-        //        //    align: 'center',
-        //        //    valign: 'middle',
-        //        //    clickToSelect: false,
-        //        //    formatter: operateFormatter,
-        //        //    events: operateEvents
-        //    }]
-        //});
+        $('#site').editableSelect({
+            effects: 'slide',
+            //可选参数default、fade
+            filter: false // 不过滤，否则选中后其它选项消失
+        });
+        $('#dev_type').editableSelect({
+            effects: 'slide',
+            filter: false
+        });
+        $('#dev_model').editableSelect({
+            effects: 'slide',
+            filter: false
+        });
 
-        //function operateFormatter(value, row, index) {
-        //    return [
-        //        '<a class="like" href="javascript:void(0)" title="Like">',
-        //        '<i class="glyphicon glyphicon-heart"></i>',
-        //        '</a>',
-        //        ' <a class="edit ml10" href="javascript:void(0)" title="Edit">',
-        //        '<i class="glyphicon glyphicon-edit"></i>',
-        //        '</a>',
-        //        ' <a class="remove ml10" href="javascript:void(0)" title="Remove">',
-        //        '<i class="glyphicon glyphicon-remove"></i>',
-        //        '</a>'
-        //    ].join('');
-        //}
+        function toDelete(id) {
+            console.log(id);
+            console.log("/DeviceMana/Delete/" + id);
 
-        //window.operateEvents = {
-        //    'click .like': function (e, value, row, index) {
-        //        alert('You click like icon, row: ' + JSON.stringify(row));
-        //        console.log(value, row, index);
-        //    },
-        //    'click .edit': function (e, value, row, index) {
-        //        alert('You click edit icon, row: ' + JSON.stringify(row));
-        //        console.log(value, row, index);
-        //    },
-        //    'click .remove': function (e, value, row, index) {
-        //        alert('You click remove icon, row: ' + JSON.stringify(row));
-        //        console.log(value, row, index);
-        //    }
-        //};
+            $.ajax({
+                url: "/DeviceMana/Delete/" + id,    //请求的url地址
+                async: true,
+                type: "POST",   //请求方式
+                success: function (req) {
+                    alert("删除成功！");
+                    location.reload();
+                },
+                error: function (req) {
+                    ;
+                    alert("删除失败！");
+                }
+            });
+        }
+        
+        var $table = $('#deviceTable')
+        var $button = $('#button')
+        $(function () {
+            $button.click(function () {
+                //$table.bootstrapTable('refresh', { url: '/DeviceMana/GetData' })
+                location.reload()
+            })
+        })
+
+        function operateFormatter(value, row, index) {
+            return [
+                '<a class="like" href="javascript:void(0)" title="Like">',
+                '<i class="glyphicon glyphicon-heart"></i>',
+                '</a>',
+                ' <a class="edit ml10" href="javascript:void(0)" title="Edit">',
+                '<i class="glyphicon glyphicon-edit"></i>',
+                '</a>',
+                ' <a class="remove ml10" href="javascript:void(0)" title="Remove">',
+                '<i class="glyphicon glyphicon-remove"></i>',
+                '</a>'
+            ].join('');
+        }
+
+        window.operateEvents = {
+            'click .like': function (e, value, row, index) {
+                alert('You click like icon, row: ' + JSON.stringify(row));
+                console.log(value, row, index);
+            },
+            'click .edit': function (e, value, row, index) {
+                alert('You click edit icon, row: ' + JSON.stringify(row));
+                console.log(value, row, index);
+            },
+            'click .remove': function (e, value, row, index) {
+                //alert('You click remove icon, row: ' + JSON.stringify(row));
+                //console.log(value, row, index);
+                toDelete(row.id);
+            }
+        };
     </script>
 }
 
+
+@*<form class="form-inline" role="form" action="/DeviceMana/AddDevice" method="post" onsubmit=""></form>*@
 @using (Html.BeginForm("AddDevice", "DeviceMana"))
 {
     @Html.AntiForgeryToken()
@@ -182,29 +149,41 @@
             @Html.EditorFor(model => model.username, new { htmlAttributes = new { @class = "form-control", @id = "username", placeholder = "请输入登录名" } })
             @Html.ValidationMessageFor(model => model.username, "", new { @class = "text-danger" })
         </div>
-        
+
         <div class="form-group">
             @Html.PasswordFor(model => model.password, new { @class = "form-control", @id = "password", placeholder = "请输入密码" })@*用htmlAttributes会显示MVC风格而不是bootstrap风格*@
             @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
         </div>
 
         <button type="submit" class="btn btn-default">提交</button>
-
+        <button id="button" class="btn btn-default">刷新</button>
     </div>
- }
+}
 
-@*<form class="form-inline" role="form" action="/DeviceMana/AddDevice" method="post" onsubmit="">
+<hr />
 
-</form>*@
+<div class="row">
+    <table id="deviceTable" data-toggle="table" data-url="/DeviceMana/GetData" data-method="get" data-silent="true" data-cache="false"
+           data-height="400" @*data-classes="table-bordered"*@ data-striped="true" data-sortable="true"
+           data-pagination="true" data-pageSize="20" data-pageList="[10, 25, 50, 100]"
+           data-search="true" data-show-columns="true" data-show-refresh="true">
+        <thead>
+            <tr>
+                <th data-field="id">序号</th>
+                <th data-field="site">站点</th>
+                <th data-field="dev_type">设备类型</th>
+                <th data-field="dev_model">设备型号</th>
+                <th data-field="site">别名</th>
+                <th data-field="dev_type">IP</th>
+                <th data-field="alg_config" data-formatter="operateFormatter" data-events="operateEvents">算法配置</th>
+                <th data-field="delete" data-formatter="operateFormatter" data-events="operateEvents">删除</th>
+            </tr>
+        </thead>
+    </table>
+</div>
 
-@*<div class="row">
-    <table id="table-javascript"></table>
-</div>*@
-
-<br />
-<br />
-
-<table class="table">
+<!--
+@*<table class="table">
     <tr>
         <th>站点</th>
         <th>设备类型</th>
@@ -218,28 +197,13 @@
     @foreach (var item in ViewData["device"] as IEnumerable<GenSys.Models.device>)
     {
         <tr>
+            <td>@Html.DisplayFor(modelItem => item.site)</td>
+            <td>@Html.DisplayFor(modelItem => item.dev_type)</td>
+            <td>@Html.DisplayFor(modelItem => item.dev_model)</td>
+            <td>@Html.DisplayFor(modelItem => item.alias)</td>
+            <td>@Html.DisplayFor(modelItem => item.ip)</td>
+            <td>@Html.ActionLink("Edit", "Edit", new { id = item.id })</td>
             <td>
-                @Html.DisplayFor(modelItem => item.site)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.dev_type)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.dev_model)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.alias)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ip)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.id })
-            </td>
-            <td>
-                @*@Html.ActionLink("删除", "Delete", new { id = item.id })*@
                 <!-- 按钮触发模态框 -->
                 <a data-toggle="modal" data-target="#myModal">删除</a>
                 <!-- 模态框（Modal） -->
@@ -256,16 +220,30 @@
                                 </h4>
                             </div>
                             <div class="modal-body">
-                                @Html.DisplayFor(modelItem => item.site)
+                                <dl class="dl-horizontal">
+                                    <dt>序号：</dt>
+                                    <dd>@Html.DisplayFor(modelItem => item.id)</dd>
+                                    <dt>IP地址：</dt>
+                                    <dd>@Html.DisplayFor(modelItem => item.ip)</dd>
+                                    <dt>媒体端口：</dt>
+                                    <dd>@Html.DisplayFor(modelItem => item.media_port)</dd>
+                                    <dt>登录名：</dt>
+                                    <dd>@Html.DisplayFor(modelItem => item.username)</dd>
+                                    <dt>登录密码：</dt>
+                                    <dd>@Html.DisplayFor(modelItem => item.password)</dd>
+                                    <dt>类型：</dt>
+                                    <dd>@Html.DisplayFor(modelItem => item.dev_type)</dd>
+                                    <dt>型号：</dt>
+                                    <dd>@Html.DisplayFor(modelItem => item.dev_model)</dd>
+                                    <dt>站点：</dt>
+                                    <dd>@Html.DisplayFor(modelItem => item.site)</dd>
+                                    <dt>别名：</dt>
+                                    <dd>@Html.DisplayFor(modelItem => item.alias)</dd>
+                                </dl>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-default"
-                                        data-dismiss="modal">
-                                    关闭
-                                </button>
-                                <button type="button" class="btn btn-warning">
-                                    确认删除
-                                </button>
+                                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                                <input type="button" class="btn btn-warning" value="确认删除" onclick="toDelete( @item.id )" />
                             </div>
                         </div><!-- /.modal-content -->
                     </div><!-- /.modal-dialog -->
@@ -273,4 +251,5 @@
             </td>
         </tr>
     }
-</table>
+</table>*@
+-->
