--- a/GenSys/Views/DeviceMana/Index.cshtml
+++ b/GenSys/Views/DeviceMana/Index.cshtml
@@ -12,7 +12,7 @@
 
 @section Scripts {
     <script src="~/Scripts/Bootstrap-Table-1.5.0/bootstrap-table.min.js"></script>
-    <script src="~/Scripts/Bootstrap-Table-1.5.0/locale/bootstrap-table-en-US.min.js"></script>
+    <script src="~/Scripts/Bootstrap-Table-1.5.0/locale/bootstrap-table-zh-CN.min.js"></script>
 
     <script src="~/Scripts/jquery.editable-select/jquery.editable-select.min.js" type="text/javascript"></script>
     <link href="~/Scripts/jquery.editable-select/jquery.editable-select.min.css" rel="stylesheet" type="text/css" />
@@ -46,31 +46,13 @@
             filter: false
         });
 
-        function toDelete(id) {
-            console.log(id);
-            console.log("/DeviceMana/Delete/" + id);
-
-            $.ajax({
-                url: "/DeviceMana/Delete/" + id,    //请求的url地址
-                async: true,
-                type: "POST",   //请求方式
-                success: function (req) {
-                    alert("删除成功！");
-                    location.reload();
-                },
-                error: function (req) {
-                    ;
-                    alert("删除失败！");
-                }
-            });
-        }
         
         var $table = $('#deviceTable')
         var $button = $('#button')
         $(function () {
             $button.click(function () {
-                //$table.bootstrapTable('refresh', { url: '/DeviceMana/GetData' })
-                location.reload()
+                $table.bootstrapTable('refresh', { url: '/DeviceMana/GetData' })
+                //location.reload()
             })
         })
 
@@ -103,6 +85,26 @@
                 toDelete(row.id);
             }
         };
+
+        function toDelete(id) {
+            console.log(id);
+            console.log("/DeviceMana/Delete/" + id);
+
+            $.ajax({
+                url: "/DeviceMana/Delete/" + id,    //请求的url地址
+                async: true,
+                type: "POST",   //请求方式
+                success: function (req) {
+                    alert("删除成功！");
+                    location.reload();
+                },
+                error: function (req) {
+                    ;
+                    alert("删除失败！");
+                }
+            });
+        }
+
     </script>
 }
 
@@ -173,8 +175,8 @@
                 <th data-field="site">站点</th>
                 <th data-field="dev_type">设备类型</th>
                 <th data-field="dev_model">设备型号</th>
-                <th data-field="site">别名</th>
-                <th data-field="dev_type">IP</th>
+                <th data-field="alias">别名</th>
+                <th data-field="ip">IP</th>
                 <th data-field="alg_config" data-formatter="operateFormatter" data-events="operateEvents">算法配置</th>
                 <th data-field="delete" data-formatter="operateFormatter" data-events="operateEvents">删除</th>
             </tr>
