--- a/GenSys/Views/Home/Index.cshtml
+++ b/GenSys/Views/Home/Index.cshtml
@@ -7,6 +7,88 @@
 <h3>@ViewBag.Message</h3>
 
 
+@section Scripts {
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
+    <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
+
+    <script type="text/javascript" src="/Scripts/camera/LAB.min.js"></script>
+    <script type="text/javascript" for="ipcocx" event="SendMsgToWeb(strMsg)">SendMsgToWeb(strMsg);</script>
+
+    <link href="~/Scripts/Bootstrap-Table-1.5.0/bootstrap-table.min.css" rel="stylesheet" />
+    <script src="~/Scripts/Bootstrap-Table-1.5.0/bootstrap-table.min.js"></script>
+    <script src="~/Scripts/Bootstrap-Table-1.5.0/locale/bootstrap-table-zh-CN.min.js"></script>
+
+    <script>
+        //$(function () {
+        //    $(function () { $("[data-toggle='popover']").popover(); });
+        //});
+
+        var tree = $('#tree').tree({
+            primaryKey: 'id',
+            dataSource: [{ text: '磨溪', children: [{ text: '井口区' }, { text: '装置区' }, { text: '大门口' }] }],
+            imageUrlField: 'flagUrl'
+        });
+        var node = tree.getNodeByText('磨溪');
+        tree.expand(node);
+
+        $LAB.script("/Scripts/camera/pluginVersion.js?version=" + (new Date).getTime())
+            .wait(function () {
+                $LAB.script("/Scripts/camera/jquery-1.11.1.min.js")
+                    //.script("~/js/json.js?version=" + version_web)
+                    .wait(function () {
+                        $LAB.script("/Scripts/camera/common.js?version=" + version_web)
+                            .script("/Scripts/camera/class.js?version=" + version_web)
+                            .script("/Scripts/camera/plugin.js?version=" + version_web)
+                            .wait(function () {
+                                $LAB.script("/Scripts/camera/main.js?version=" + version_web)
+                            })
+                    })
+            })
+
+        function operateFormatter(value, row, index) {
+            return [
+                '<a class="like" href="javascript:void(0)" title="Like">',
+                '<i class="glyphicon glyphicon-heart"></i>',
+                '</a>',
+                ' <a class="edit ml10" href="javascript:void(0)" title="Edit">',
+                '<i class="glyphicon glyphicon-edit"></i>',
+                '</a>',
+                ' <a class="remove ml10" href="javascript:void(0)" title="Remove">',
+                '<i class="glyphicon glyphicon-remove"></i>',
+                '</a>'
+            ].join('');
+        }
+
+        window.operateEvents = {
+            'click .like': function (e, value, row, index) {
+                alert('You click like icon, row: ' + JSON.stringify(row));
+                console.log(value, row, index);
+            },
+            'click .edit': function (e, value, row, index) {
+                alert('You click edit icon, row: ' + JSON.stringify(row));
+                console.log(value, row, index);
+            },
+            'click .remove': function (e, value, row, index) {
+                alert('You click remove icon, row: ' + JSON.stringify(row));
+                console.log(value, row, index);
+            }
+        };
+
+        var $table = $('#alarmTable')
+        function myRefreshAlarm() {
+            //在本函数内定义table变量，会提示不支持bootstrapTable方法
+            $table.bootstrapTable('refresh', { url: '/Home/GetAlarm' });
+        }
+        setInterval(myRefreshAlarm, 3000);
+
+    </script>
+}
+
+
 <div class="row">
     <div class="col-md-2">
         <div id="tree" style="width:150px"></div>
@@ -57,6 +139,7 @@
                     显示
                 </a>
             </div>*@
+
             <br>
 
             <div class="liveCenter" id="liveOcx"></div>
@@ -65,7 +148,29 @@
         <br>
         <div class="row">
             @*<table id="table-javascript"></table>*@
-            <table class="table">
+
+            <div class="row">
+                <table id="alarmTable" data-toggle="table" data-url="/Home/GetAlarm" data-method="get" data-silent="true" data-cache="false"
+                       data-height="520" @*data-classes="table-bordered"*@ data-striped="true"
+                       data-sortable="true" data-sort-name="id" data-sort-order="desc"
+                       data-pagination="true" data-pageSize="20" data-pageList="[10, 25, 50, 100]"
+                       data-search="true" data-show-columns="true" data-show-refresh="true">
+                    <thead>
+                        <tr>
+                            <th data-field="id" data-sortable="true">序号</th>
+                            <th data-field="state" data-sortable="true">状态</th>
+                            <th data-field="site" data-sortable="true">站点</th>
+                            <th data-field="alias" data-sortable="true">摄像机名称</th>
+                            <th data-field="algorithm_id" data-sortable="true">事件类型</th>
+                            <th data-field="datetime" data-sortable="true">报警时间</th>
+                            <th data-field="show_image" data-formatter="operateFormatter" data-events="operateEvents">事件录像</th>
+                            <th data-field="alg_config" data-formatter="operateFormatter" data-events="operateEvents">确认</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+
+            @*<table class="table">
                 <tr>
                     <th>序号</th>
                     <th>状态</th>
@@ -80,195 +185,26 @@
                 @foreach (var item in ViewData["alarm"] as IEnumerable<GenSys.Models.alarm>)
                 {
                     <tr>
+                        <td>@Html.DisplayFor(modelItem => item.id)</td>
+                        <td>@Html.DisplayFor(modelItem => item.state)</td>
+                        <td>@Html.DisplayFor(modelItem => item.site)</td>
+                        <td>@Html.DisplayFor(modelItem => item.alias)</td>
+                        <td>@Html.DisplayFor(modelItem => item.algorithm_id)</td>
+                        <td>@Html.DisplayFor(modelItem => item.datetime)</td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.id)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.state)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.site)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.alias)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.algorithm_id)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.datetime)
-                        </td>
-                        <td>
-
                             <a title="Popover title"
-                               data-container="body" data-html="true"
-                               data-toggle="popover" data-placement="left"
-                               data-content="<img src='@Html.DisplayFor(modelItem => item.image)' class='img-rounded'>">
+                                data-container="body" data-html="true"
+                                data-toggle="popover" data-placement="left"
+                                data-content="<img src='@Html.DisplayFor(modelItem => item.image)' class='img-rounded'>">
                                 显示
                             </a>
                         </td>
-                        <td>
-                            @Html.ActionLink("确认", "Edit", new { id = item.id })
-                        </td>
+                        <td>@Html.ActionLink("确认", "Edit", new { id = item.id })</td>
                     </tr>
                 }
-
-            </table>
-
+            </table>*@
         </div>
     </div>
 </div>
 
-@section css {
-    <link href="~/Scripts/Bootstrap-Table-1.5.0/bootstrap-table.min.css" rel="stylesheet" />
-    <style type="text/css">
-    </style>
-}
 
-@section Scripts {
-    <script>
-        $(function () {
-            $(function () { $("[data-toggle='popover']").popover(); });
-        });
-    </script>
-
-    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
-    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
-    <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
-    <script>
-        var tree = $('#tree').tree({
-            primaryKey: 'id',
-            dataSource: [{ text: '磨溪', children: [{ text: '井口区' }, { text: '装置区' }, { text: '大门口' }] }],
-            imageUrlField: 'flagUrl'
-        });
-        var node = tree.getNodeByText('磨溪');
-        tree.expand(node);
-    </script>
-
-    <script type="text/javascript" src="/Scripts/camera/LAB.min.js"></script>
-    <script type="text/javascript" for="ipcocx" event="SendMsgToWeb(strMsg)">
-        SendMsgToWeb(strMsg);
-    </script>
-    <script type="text/javascript">
-        $LAB.script("/Scripts/camera/pluginVersion.js?version=" + (new Date).getTime())
-            .wait(function () {
-                $LAB.script("/Scripts/camera/jquery-1.11.1.min.js")
-                    //                            .script("~/js/json.js?version=" + version_web)
-                    .wait(function () {
-                        $LAB.script("/Scripts/camera/common.js?version=" + version_web)
-                            .script("/Scripts/camera/class.js?version=" + version_web)
-                            .script("/Scripts/camera/plugin.js?version=" + version_web)
-                            .wait(function () {
-                                $LAB.script("/Scripts/camera/main.js?version=" + version_web)
-                            })
-                    })
-            })
-    </script>
-
-    <script src="~/Scripts/Bootstrap-Table-1.5.0/bootstrap-table.min.js"></script>
-    <script src="~/Scripts/Bootstrap-Table-1.5.0/locale/bootstrap-table-en-US.min.js"></script>
-    <script type="text/javascript">
-        $(function () {
-            $('#table-javascript').bootstrapTable({
-                method: 'get',
-                url: '/Home/GetAlarm',
-                cache: false,
-                height: 400,
-                striped: true,
-                pagination: true,
-                pageSize: 50,
-                pageList: [10, 25, 50, 100, 200],
-                search: true,
-                showColumns: true,
-                showRefresh: true,
-                minimumCountColumns: 2,
-                clickToSelect: true,
-                columns: [{
-                    field: 'Id',
-                    title: '序号',
-                    align: 'center',
-                    valign: 'middle',
-                    sortable: true
-                }, {
-                    field: 'State',
-                    title: '状态',
-                    align: 'center',
-                    valign: 'middle',
-                    sortable: true
-                }, {
-                    field: 'Site',
-                    title: '站点',
-                    align: 'center',
-                    valign: 'middle',
-                    sortable: true
-                }, {
-                    field: 'Camera',
-                    title: '摄像机名称/ID',
-                    align: 'center',
-                    valign: 'middle',
-                    sortable: true
-                }, {
-                    field: 'Issue',
-                    title: '事件类型',
-                    align: 'center',
-                    valign: 'middle',
-                    sortable: true
-                }, {
-                    field: 'Time',
-                    title: '报警时间',
-                    align: 'center',
-                    valign: 'middle',
-                    sortable: true
-                }, {
-                    field: 'Video',
-                    title: '事件录像',
-                    align: 'center',
-                    valign: 'middle',
-                    sortable: true
-                }, {
-                    field: 'Confirm',
-                    title: '确认',
-                    align: 'center',
-                    valign: 'middle',
-                    clickToSelect: false,
-                    formatter: operateFormatter,
-                    events: operateEvents
-                }]
-            });
-
-        });
-
-        function operateFormatter(value, row, index) {
-            return [
-                '<a class="like" href="javascript:void(0)" title="Like">',
-                '<i class="glyphicon glyphicon-heart"></i>',
-                '</a>',
-                ' <a class="edit ml10" href="javascript:void(0)" title="Edit">',
-                '<i class="glyphicon glyphicon-edit"></i>',
-                '</a>',
-                ' <a class="remove ml10" href="javascript:void(0)" title="Remove">',
-                '<i class="glyphicon glyphicon-remove"></i>',
-                '</a>'
-            ].join('');
-        }
-
-        window.operateEvents = {
-            'click .like': function (e, value, row, index) {
-                alert('You click like icon, row: ' + JSON.stringify(row));
-                console.log(value, row, index);
-            },
-            'click .edit': function (e, value, row, index) {
-                alert('You click edit icon, row: ' + JSON.stringify(row));
-                console.log(value, row, index);
-            },
-            'click .remove': function (e, value, row, index) {
-                alert('You click remove icon, row: ' + JSON.stringify(row));
-                console.log(value, row, index);
-            }
-        };
-
-    </script>
-}
